--- a/data/publications.bib
+++ b/data/publications.bib
@@ -1,7 +1,13 @@
-@article{zhu2024example,
-  title={An Example Paper},
-  author={Zhu, Taiyang and Coauthor, A.},
-  journal={Journal of Finance},
-  year={2024},
-  url={https://example.com/paper.pdf}
+@article{ZHU2025108519,
+title = {Latent factor model in asset pricing: A deep learning approach in the Chinese stock market},
+journal = {Finance Research Letters},
+volume = {86},
+pages = {108519},
+year = {2025},
+issn = {1544-6123},
+doi = {https://doi.org/10.1016/j.frl.2025.108519},
+url = {https://www.sciencedirect.com/science/article/pii/S1544612325017738},
+author = {Taiyang Zhu},
+keywords = {Deep learning, Latent factors, Asset pricing, Chinese stock market},
+abstract = {We construct six deep factors-value, intangibles, investment, profitability, frictions and momentum-using Deep Neural Networks (DNNs) trained on distinct characteristic categories. These factors exhibit significant risk exposures and capture unique information beyond the factors in the Fama–French 5-factor model. Using monthly data from the Chinese stock market over the period 2005–2024, we find that momentum, value, and frictions are the most influential factor groups overall. However, their relative importance varies across portfolios: momentum effects tend to weaken, while value and frictions-related factors become more dominant. Our approach improves interpretability in deep learning-based asset pricing, offering a systematic framework for analyzing characteristic-driven returns.}
 }
